--- a/templates/admin/show_user.html
+++ b/templates/admin/show_user.html
@@ -38,10 +38,7 @@
                     </dl>
                 </div>
                 <div class="col-md-12">
-                    <h3 class="title-icon pull-left"><i class="fa fa-bar-chart"></i> </h3>
-                    <div class="title">
-                        <h3>Stats</h3>
-                    </div>
+                    <h3 class="title-icon"><i class="fa fa-bar-chart"> </i> Stats</h3>
                     <dl class="dl-horizontal">
                         <dt>Case opened:</dt>
                         <dd><span class="badge badge-important">{{ user.owned_cases.all|length }}</span></dd>
