--- a/templates/users/password_change_done.html
+++ b/templates/users/password_change_done.html
@@ -1,30 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-lock"> </i> Password change</h2>
-        </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "users.views.profile" %}"><i class="icon-user"> </i> Profile</a>
-                    <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    Password change
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            <div class="alert alert-info">
-                Password changed!
+
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li>
+                <a href="{% url "users.views.profile" %}"><i class="fa fa-user"></i> Profile</a>
+            </li>
+            <li class="active">
+                Password change
+            </li>
+        </ol>
+    </div>
+</div>
+
+    <div class="content">
+        <div class="col-md-12">
+            <div class="wdgt">
+                <div class="alert alert-info">
+                    Password changed!
+                </div>
             </div>
         </div>
     </div>
-</div>
+
 {% endblock %}
