--- a/templates/users/password_change.html
+++ b/templates/users/password_change.html
@@ -1,51 +1,55 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="span11">
-    <div class="content content-large">
-        <div class="content-header">
-            <h2><i class="icon-key"> </i> Change password</h2>
+
+    <div class="crumbs">
+        <ol class="breadcrumb hidden-xs">
+            <li>
+                <i class="fa fa-home"></i><a href="/">Dashboard</a>
+            </li>
+            <li>
+                <a href="{% url "users.views.profile" %}"><i class="fa fa-user"></i> Profile</a>
+            </li>
+            <li class="active">
+                Change password
+            </li>
+        </ol>
+    </div>
+</div>
+
+    <div class="content">
+        <div class="page-h1">
+            <h1>Change password</h1>
         </div>
-        <div class="content-breadcrumb">
-            <ul class="breadcrumb">
-                <li>
-                    <a href="/"><i class="icon-home"> </i> Dashboard</a><span class="divider">&rsaquo;</span>
-                </li>
-                <li>
-                    <a href="{% url "users.views.profile" %}"><i class="icon-user"> </i> Profile</a>
-                    <span class="divider">&rsaquo;</span>
-                </li>
-                <li class="active">
-                    Change password
-                </li>
-            </ul>
-        </div>
-        <div class="content-body">
-            <form action="{% url "django.contrib.auth.views.password_change" %}" method="post">{% csrf_token %}
-                <div class="control-group">
-                    <div class="controls">
-                        <div class="fieldWrapper">
-                            <label for="id_first_name">Old password:</label>
-                            {{ form.old_password }}<span class="help-inline">{{ form.old_password.errors }}</span>
+        <div class="col-md-12">
+            <div class="wdgt">
+                <div class="wdgt-header">Change password for {{ user.username }}</div>
+                <div class="wdgt-body" style="padding-bottom:10px;">
+                    <form action="{% url "django.contrib.auth.views.password_change" %}" method="post">{% csrf_token %}
+                        <div class="form-group">
+                            Old password:
+                            <div class="controls box">
+                                {{ form.old_password }}<span class="help-inline">{{ form.old_password.errors }}</span>
+                            </div>
+                            New password:
+                            <div class="controls box">
+                                {{ form.new_password1 }}<span class="help-inline">{{ form.new_password1.errors }}</span>
+                            </div>
+                            Password (again):
+                            <div class="controls box">
+                                {{ form.new_password2 }}<span class="help-inline">{{ form.new_password2.errors }}</span>
+                            </div>
                         </div>
-                        <div class="fieldWrapper">
-                            <label for="id_first_name">New password:</label>
-                            {{ form.new_password1 }}<span class="help-inline">{{ form.new_password1.errors }}</span>
+                        <div class="form-actions">
+                            <button id="btn_submit" type="submit" class="btn btn-success">
+                                Change
+                            </button>
+                            <a href="{% url "users.views.profile" %}" class="btn btn-default"> Back </a>
                         </div>
-                        <div class="fieldWrapper">
-                            <label for="id_first_name">Password (again):</label>
-                            {{ form.new_password2 }}<span class="help-inline">{{ form.new_password2.errors }}</span>
-                        </div>
-                    </div>
+                    </form>
                 </div>
-                <div class="form-actions">
-                    <button id="btn_submit" type="submit" class="btn btn-large btn-success">
-                        Change
-                    </button>
-                    <a href="{% url "users.views.profile" %}" class="btn btn-large"> Back </a>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-</div>  
+
 {% endblock %}
