--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -134,8 +134,7 @@
                 success : function(data) {
                     if (data == "False"){
                         $('#newVersion').css('display', 'none');
-                        //$('#newVersion').show();
-                        //$('#newVersionFooter').show();
+                        $('#newVersionFooter').css('display', 'none');
                     }
                 }
             });
