--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
         {% include "layout/_sidebar.html" %}
         {% block content %}{% endblock %}
         <div id="footer">
-            <small class="pull-right"><strong>Ghiro 0.3-dev - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://burlone.info/">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" class="hide"><span class="badge badge-success">New version available</span></a></small>
+            <small class="pull-right"><strong>Ghiro 0.3-dev - &copy;</strong> With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://twitter.com/burloneM" target="_blank">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" target="_blank"><span class="label label-success">New version available</span></a></small>
         </div>
     </div>
 </body>
