--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,20 @@
     <script src="{{ STATIC_URL }}js/jquery.fancybox.js"></script>
     <script src="{{ STATIC_URL }}js/highcharts.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.colorbox.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+        $.ajax({
+            url : "{% url 'manage.views.update_check' %}",
+            type : "GET",
+            success : function(data) {
+                if (data == "False"){
+                    $('#newVersion').css('display', 'none');
+                    $('#newVersionFooter').css('display', 'none');
+                }
+            }
+        });
+    });
+    </script>
 </head>
 <body>
     <div class="cntnr">
