--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -325,7 +325,7 @@
             {% else %}
                 <div class="alert">
                     <span class="fa fa-info-circle"></span>
-                    <strong>Info!</strong> there are not any photos.
+                    There are not any photos.
                 </div>
             {% endif %}
     {% elif pagename == "map" %}
