--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -35,7 +35,7 @@
                                 <thead>
                                     <tr>
                                         <th>Username</th>
-                                        <th>Actived</th>
+                                        <th>Active</th>
                                         <th>Superuser</th>
                                         <th>Actions</th>
                                     </tr>
