--- a/templates/layout/_sidebar.html
+++ b/templates/layout/_sidebar.html
@@ -1,34 +1,27 @@
 <div class="left hidden-xs">
     <div class="logo"><img id="logo" src="/static/img/logo/logo_ghiro176x80.png" style="width:135lspx !important; height:52px; !important"></div>
     <div class="sidebar">
-        <div class="">
-            <div class="">
-                <a href="/" id="side-dashboard" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Dashboard" type="button">
-                    <i class="fa fa-dashboard fa-2x"></i>
-                </a>
-                <a href="{% url "analyses.views.list_cases" %}" id="side-cases" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Cases" type="button">
-                    <i class="fa fa-book fa-2x"></i>
-                </a>
-            </div>
-            <div class="">
-                <a href="{% url "analyses.views.list_images" "list" %}" id="side-images" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Images" type="button">
-                    <i class="fa fa-picture-o fa-2x"></i>
-                </a>
-                <a href="{% url "analyses.views.search" "form" %}" id="side-search" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Search" type="button">
-                    <i class="fa fa-search fa-2x"></i>
-                </a>
-            </div>
-            <div class="">
-                <a href="{% url "hashes.views.list_hashes" %}" id="side-hashes" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Hashes" type="button">
-                    <i class="fa fa-list fa-2x"></i>
-                </a>
-                {% if request.user.is_stuff or request.user.is_superuser %}
-                    <a href="{% url "users.views.admin_list_users" %}" id="side-admin" class="btn btn-dark btn-lg-sd" data-tooltip="tooltip" data-placement="bottom" title="Adminitration" type="button">
-                        <i class="fa fa-cogs fa-2x"></i>
-                    </a>
-                {% endif %}
-            </div>
-        </div>
+        <a href="/" id="side-dashboard" class="btn btn-dark btn-lg-sd" type="button">
+            <i class="fa fa-dashboard fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Dashboard" ></i>
+        </a>
+        <a href="{% url "analyses.views.list_cases" %}" id="side-cases" class="btn btn-dark btn-lg-sd" type="button">
+            <i class="fa fa-book fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Cases" ></i>
+        </a>
+        <a href="{% url "analyses.views.list_images" "list" %}" id="side-images" class="btn btn-dark btn-lg-sd" type="button">
+            <i class="fa fa-picture-o fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Images"></i>
+        </a>
+        <a href="{% url "analyses.views.search" "form" %}" id="side-search" class="btn btn-dark btn-lg-sd" type="button">
+            <i class="fa fa-search fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Search"></i>
+        </a>
+
+        <a href="{% url "hashes.views.list_hashes" %}" id="side-hashes" class="btn btn-dark btn-lg-sd" type="button">
+            <i class="fa fa-list fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Hashes"></i>
+        </a>
+        {% if request.user.is_stuff or request.user.is_superuser %}
+            <a href="{% url "users.views.admin_list_users" %}" id="side-admin" class="btn btn-dark btn-lg-sd" type="button">
+                <i class="fa fa-cogs fa-2x" data-tooltip="tooltip" data-placement="bottom" title="Adminitration"></i>
+            </a>
+        {% endif %}
     </div>
 </div>
 
