Modified header layout

--- a/templates/admin/dependencies.html
+++ b/templates/admin/dependencies.html
@@ -19,7 +19,7 @@
 
     <div class="content">
         <div class="page-h1">
-            <h1>Administration: <small>required modules</small></h1>
+            <h1>Administration <small>required modules</small></h1>
         </div>
         <div class="col-md-12">
             <div class="wdgt">
